# flutter_avif

./: .gitignore  ACKNOWLEDGEMENTS.md  README.md  pubspec.yaml
android/: build.gradle
example/android/: local.properties
example/assets/: vettel.avif
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
flutter_avif/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
flutter_avif/example/: README.md  pubspec.yaml
flutter_avif/lib/: flutter_avif.dart
flutter_avif/test/: flutter_avif_test.dart
flutter_avif_android/: CHANGELOG.md  README.md  pubspec.yaml
flutter_avif_android/android/: build.gradle  settings.gradle
flutter_avif_android/lib/: flutter_avif_android.dart
flutter_avif_ios/: CHANGELOG.md  README.md  pubspec.yaml
flutter_avif_ios/ios/: flutter_avif_ios.podspec
flutter_avif_ios/lib/: flutter_avif_ios.dart
flutter_avif_linux/: CHANGELOG.md  README.md  pubspec.yaml
flutter_avif_linux/lib/: flutter_avif_linux.dart
flutter_avif_linux/linux/: CMakeLists.txt  flutter_avif_linux_plugin.cc  flutter_avif_plugin.cc
flutter_avif_macos/: CHANGELOG.md  README.md  pubspec.yaml
flutter_avif_macos/lib/: flutter_avif_macos.dart
flutter_avif_macos/macos/: flutter_avif_macos.podspec
flutter_avif_platform_interface/: CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
flutter_avif_platform_interface/headers/: flutter_avif.h
flutter_avif_platform_interface/lib/: bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  flutter_avif_bridge.io.dart  flutter_avif_bridge.web.dart  flutter_avif_ffi.dart  flutter_avif_platform_interface.dart  frb_generated.dart  frb_generated.io.dart
flutter_avif_web/: README.md  pubspec.yaml
flutter_avif_web/lib/: avif_decoder.dart  avif_encoder.dart  (+2 more)
flutter_avif_windows/: CHANGELOG.md  README.md  pubspec.yaml
ios/: flutter_avif.podspec
lib/: bridge_generated.dart  ffi.dart  flutter_avif.dart
macos/: flutter_avif.podspec
protobuf/: avif_info.proto  encode_frame.proto  encode_request.proto  frame.proto  key_request.proto  makefile
rav1e_wasm/: Cargo.toml  makefile
rav1e_wasm/src/: decode.rs  encode.rs  lib.rs
rust/: Cargo.toml  makefile
rust/darwin/: Export.h  Info.plist  module.modulemap
rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  flutter_avif.rs  frb_generated.rs  lib.rs
rust/src/api/: avif.rs  mod.rs
rust/src/models/: avif_info.rs  encode_frame.rs  encode_request.rs  frame.rs  key_request.rs  mod.rs
wasm/encoder/: Cargo.toml  makefile
wasm/encoder/src/: decode.rs  encode.rs  lib.rs
windows/: flutter_avif_plugin.cpp
(+70 files in other folders)
