[package]
name = "rav1e_wasm"
description = "Rav1e WASM"
version = "2.1.1"
authors = ["Yunus Emre Keskin <yekeskin@aol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.88"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
avif-serialize = "0.8.1"
rav1e = { version = "0.6.6", default-features = false, features = ["asm", "threading", "wasm"] }
rgb = "0.8.37"
js-sys = "0.3.65"

[dev-dependencies]
wasm-bindgen-test = "0.3.38"

[profile.release]
opt-level = "z"
lto = true
